<resources>
    <string name="app_name">Sellsy Demo</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="name">Name</string>
    <string name="telephone">Telephone</string>
    <string name="email">Email</string>
    <string name="mobile">Mobile</string>

    <string name="general">General</string>
    <string name="billing_information">Billing Information</string>
    <string name="accounting_data">Accounting Data</string>
    <string name="delivery">Delivery</string>

    <string name="auxiliary_account_code">Auxiliary account code</string>
    <string name="tariff_category">Tariff category</string>
    <string name="reference">Reference</string>

    <string name="address">Address</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="country">Country</string>

</resources>
